# task_demo

./: .env.sample  .gitignore  .todo-config.json  Cargo.toml  README.md
docs/: phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md
migrations/2021-01-13-051720_create_users/: up.sql
migrations/2021-01-13-051900_create_tasks/: up.sql
src/: cli.rs  constants.rs  main.rs  schema.rs
src/config/: db.rs  mod.rs  redis.rs  rocket.rs
src/constants/: code_constants.rs  message_constants.rs  mod.rs  static_num_constants.rs
src/controllers/: mod.rs  sessions_controller.rs  tasks_controller.rs  users_controller.rs
src/models/: task.rs  user.rs
src/services/: account_service.rs  jwt.rs  mod.rs  task_service.rs  user_service.rs  user_token.rs
src/utils/: constant_code.rs  constants.rs  error.rs  mod.rs  response.rs  util.rs
