[package]
name = "task_demo"
version = "0.1.0"
authors = ["Caitlin Gao <caitlin.gaoo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
chrono = { version = "0.4.19", features = ["serde"] }
rocket_cors = "0.5.1"
multipart = "0.17.1"

serde_json = "1.0.60"
serde_derive = "1.0.118"
serde = { version = "1.0", features = ["derive"] }

clap = "3.0.0-beta.2"

diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"

redis = { version = "0.19.0", features = ["r2d2"] }
r2d2_redis = "0.13.0"

bcrypt = "0.8"
jsonwebtoken = "7.2.0"

itertools = "0.10"

log = "0.4.11"
env_logger = "0.7.1"

[dependencies.rocket_contrib]
version = "0.4.6"
default_features = false
features = [ "json", "serve", "redis_pool"]

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]